package com.rockpaperscissor.app.Controller;

import com.rockpaperscissor.app.Model.Shape;

public class ComputerController extends PlayerController  {

    @Override
    public Shape selectShape(int shapeNumber) {
        // TODO Auto-generated method stub
        throw new UnsupportedOperationException("Unimplemented method 'selectShape'");
    }
    
}
