@startuml rsp-controller
class RSPGameController{
    -Player player1
    -Player player2
    -Round round

    +void setup()
    +void Execute()
    +void RegisterPlayer()
}

abstract class PlayerController{
    +selectShape()
}


class RoundController{
    -int roundCounter
    -Shape shape

    +Round(Player playerOne, Player playerTwo)
    +void executeRounds()
    +void determinateRoundWinner()
    +void determinateWinner()
}

class HumanController{
    +selectShape()
}

class ComputerController{
    +selectShape()
}

RSPGameController *-- PlayerController
RSPGameController *-- RoundController
PlayerController o-- HumanController
PlayerController o-- ComputerController
@enduml